src/core/Claroline/PluginBundle/Tests/stub/plugin/application/Valid/Basic/ValidBasic.php
<?php

namespace Valid\Basic;

use Claroline\PluginBundle\AbstractType\ClarolineApplication;
use Claroline\PluginBundle\Widget\ApplicationLauncher;

class ValidBasic extends ClarolineApplication
{
    public function getLaunchers()
    {
        return array(
            new ApplicationLauncher('route_test', 'translation_test', array('ROLE_USER'))
        );
    }
    
    public function getIndexRoute()
    {
        return 'valid_minimal_index';
    }
}